--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <script src='main.js'></script>
 </head>
 <body>
-    Olá
+    <div id="pagina">
+        </div
+id="cabecalho">cabecalho</div>
+        <div
+id="esquerda">esquerda</div>
+        <div id="centro">centro</div>
+        <div id="direita">direita</div>
+        <div id="rodape">rodape</div>
+    </div>           
 </body>
 </html>>
 
