--- a/index.html
+++ b/index.html
@@ -1,22 +1,43 @@
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Aula1</title>
+    <title>Riske Gostoso</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    <div id="pagina">
-        </div
-id="cabecalho">cabecalho</div>
-        <div
-id="esquerda">esquerda</div>
-        <div id="centro">centro</div>
-        <div id="direita">direita</div>
-        <div id="rodape">rodape</div>
-    </div>           
-</body>
-</html>>
+   
+    <header>
+        <div class="cabecalho">
+            <h1><marquee behavior="alternate">DESENVOLVIMENTO DE AULAS - Pensamento Computacional</marquee></h1>
+        </div>
+    </header> 
+    <nav>
+         <div id="menu">
+            <h2>Links informativo</h2>
+            <ul>
+                <li><a href="https://allthetags.com/" target="_self">Site, ajuda a entender um pouco sobre as tags</a></li>
+            <br>
+            </ul>
+            <h2>Menu de Exemplos</h2>
+            <ul>
+                <li><a href="Divs.html" target="_self">Exemplos com Divs</a></li>
+            <br>
+                <li><a href="Imagem.html" target="_self">Exemplos com Imagens</a></li>
+            </ul> 
+            <h2>Menu de Exercícios</h2>
+            <ul>
+                <li><a href="Exercício-Terceiro trimestre.html" target="_self">Desenvolvimento da página - Estrutura e semântica do HTML5</a></li>
+            <br>
+        </div>
+    </nav>
+        <div id="principal">
+        <a href="pensamento.mp4" target="_self">vídeo</a></li>
+        <h1><img src="imagens/Pensamento.jpg" class="imagemcomputacional"></h1>
+        </div>
 
+</body>
+</html>
