--- a/index.html
+++ b/index.html
@@ -12,26 +12,12 @@
    
     <header>
         <div class="cabecalho">
-            <h1><marquee behavior="alternate">DESENVOLVIMENTO DE AULAS - Pensamento Computacional</marquee></h1>
+            <h1><marquee behavior="alternate">Meus Carros</marquee></h1>
         </div>
     </header> 
     <nav>
          <div id="menu">
-            <h2>Links informativo</h2>
-            <ul>
-                <li><a href="https://allthetags.com/" target="_self">Site, ajuda a entender um pouco sobre as tags</a></li>
-            <br>
-            </ul>
-            <h2>Menu de Exemplos</h2>
-            <ul>
-                <li><a href="Divs.html" target="_self">Exemplos com Divs</a></li>
-            <br>
-                <li><a href="Imagem.html" target="_self">Exemplos com Imagens</a></li>
-            </ul> 
-            <h2>Menu de Exercícios</h2>
-            <ul>
-                <li><a href="Exercício-Terceiro trimestre.html" target="_self">Desenvolvimento da página - Estrutura e semântica do HTML5</a></li>
-            <br>
+
         </div>
     </nav>
         <div id="principal">
