--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    
     <header>
         <div class="cabecalho">
-            <h1><marquee behavior="alternate">Meus Carros</marquee></h1>
+            <h1><marquee behavior="alternate">rotações do volei</marquee></h1>
         </div>
     </header> 
     <nav>
@@ -21,9 +21,12 @@
         </div>
     </nav>
         <div id="principal">
-        <a href="pensamento.mp4" target="_self">vídeo</a></li>
-        <h1><img src="imagens/Pensamento.jpg" class="imagemcomputacional"></h1>
+        <p>principal</p>
         </div>
-
+        
+        <div id="rodape">
+            <p>rodapé</p>
+            </div>
+    
 </body>
 </html>
