--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    
     <header>
         <div class="cabecalho">
-            <h1><marquee behavior="alternate">rotações do volei</marquee></h1>
+            <h1>rotações do volei</h1>
         </div>
     </header> 
     <nav>
