--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
     </nav>
         <div id="principal">
-        <p>principal</p>
+        <p>A rotação é o movimento dos jogadores de um time em sentido horário a fim de que cada jogador passe a ocupar a posição seguinte a sua. Uma rotação ocorre sempre que a equipe receptora ganha o direito de saque por ter marcado um ponto ou pelo fato de a equipe adversária ter cometido um erro ou uma falta./</p>
         </div>
         
         <div id="rodape">
